--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
