--- a/package.json
+++ b/package.json
@@ -2,42 +2,43 @@
   "name": "altum-analytics",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "train": "curl -X POST http://localhost:3000/api/train",
-    "train:real": "tsx scripts/train-model.mts"
+    "train:real": "tsx scripts/train-model.mts",
+    "cleanup:prices": "tsx scripts/cleanup-price-data.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.88.0",
-    "@tensorflow/tfjs": "^4.22.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "jspdf": "^3.0.4",
-    "jspdf-autotable": "^5.0.2",
-    "lightweight-charts": "^5.1.0",
-    "lucide-react": "^0.561.0",
+    "@supabase/ssr": "^0.6.2",
+    "@supabase/supabase-js": "^2.49.1",
+    "@tensorflow/tfjs": "^4.23.0",
+    "lucide-react": "^0.469.0",
     "next": "16.0.10",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "stripe": "^20.1.0",
-    "tailwind-merge": "^3.4.0",
-    "zustand": "^5.0.9"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.0",
+    "stripe": "^18.3.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "babel-plugin-react-compiler": "1.0.0",
+    "@vitest/ui": "^2.1.8",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
-    "tailwindcss": "^4",
-    "tsx": "^4.21.0",
-    "typescript": "^5"
+    "eslint-config-next": "15.1.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5",
+    "vitest": "^2.1.8"
   }
 }
