--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.49.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tensorflow/tfjs": "^4.22.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "16.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0",
     "stripe": "^18.3.0",
+    "tailwind-merge": "^3.4.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
