--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@tensorflow/tfjs": "^4.22.0",
+    "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "16.0.10",
@@ -38,7 +39,7 @@
     "@vitest/ui": "^2.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "tsx": "^4.19.2",
     "typescript": "^5",
