fix: add missing dependencies (jspdf, @vitejs/plugin-react) and fix Stripe API version

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tensorflow/tfjs": "^4.22.0",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.469.0",
     "next": "16.0.10",
     "react": "^19.0.0",
@@ -36,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.2",
     "@vitest/ui": "^2.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
