feat: implement Hybrid 5D AI Scoring and fix Pokemon TCG API issues

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@tensorflow/tfjs": "^4.22.0",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.469.0",
