--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@tensorflow/tfjs": "^4.22.0",
     "autoprefixer": "^10.4.23",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "jspdf": "^3.0.4",
@@ -33,6 +34,7 @@
     "recharts": "^2.15.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8.5.6",
+    "shadcn": "^3.6.2",
     "tailwindcss": "^3.4.19",
     "tsx": "^4.19.2",
     "typescript": "^5",
