feat: add Cardmarket price guide integration with daily sync and history API

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-{}
+{
+    "crons": [
+        {
+            "path": "/api/cron/sync-cardmarket",
+            "schedule": "0 3 * * *"
+        }
+    ]
+}
